--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -486,8 +486,8 @@
 		}
 		
 	nav#global ul.hover_nav li:hover {
-/* 		color: #FFF; */
-font-weight: bold;
+		/* 		color: #FFF; */
+		font-weight: bold;
 		}
 		
 	nav#global ul.hover_nav a {
@@ -887,6 +887,11 @@ font-weight: bold;
 		margin-top: 40px;
 		margin-left: 10px;
 	 	}
+	
+	header#intranet nav#global > ul > li:hover {
+		background-color: #f47d1c;
+	}
+	
 	 	
  	header#intranet nav#global > ul > li > a > span#intranet_user{
  		padding-left: 5px;
