--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -309,6 +309,10 @@
 	h5 {
 		font-weight: normal;
 		}
+	
+	h5.intranet{
+		font-size: 18px;
+		}
 		
 	hr {
 		margin: 30px 0 30px 10px;
@@ -369,7 +373,14 @@
 	span.breadcrumb{
 		font-size: 12px;
 		}
-	
+		
+	.quiet{
+		font-size: 12px;
+		color: #999;
+		}
+	a.quiet{
+		color: #F36235;
+		}
 	/* If you ever need a semantically generic inline list, use this. */
 	ul.inline li {
 		list-style: none;
@@ -1008,88 +1019,49 @@
 		list-style: none;
 		float: left;
 		}
- 
-/**
- * Intranet
- * Edit Profile
- *
- */	
- 
- 	header#intranet nav#global img{
-	 	border: 2px solid white;
-	 	position: relative;
-	 	float: left;
-		margin-top: 40px;
-		margin-left: 10px;
-	 	}
-	
-	header#intranet nav#global > ul > li:hover {
-		background-color: #f47d1c;
-	}
-	
-	 	
- 	header#intranet nav#global > ul > li > a > span#intranet_user{
- 		padding-left: 5px;
- 	}
- 		
-	#profile {
-		margin-top: 60px;
-		}
-		
-	#profile div#username {
-		font-size: 32px;
-		}
-			
-	#profile form {
-		margin-top: 30px;
-		}
-			
-	#profile form input {
-	  -webkit-border-radius: 2px;
-		-moz-border-radius: 2px;
-		border-radius: 2px;
-		
-		font: 12px "Lucida Grande","Tahoma", sans-serif;
-		padding:7px 5px 7px 5px;
-		border: 1px solid #999;
-		margin-bottom: 10px;
-		width: 350px;
-		float: left;
-		}
-	
-	#profile form textarea {
-	  -webkit-border-radius: 2px;
-		-moz-border-radius: 2px;
-	  border-radius: 2px;
-
-		font: 12px/1.5 "Lucida Grande","Tahoma", sans-serif;
-		padding:7px 5px 7px 5px;
-		border: 1px solid #999;
-		margin-bottom: 15px;
-		height: 125px;
-	  width: 350px;
-		resize: none;
-		float: left;
-		}
-	
-	#profile form label {
-		position: relative;
-		width: 150px;
-		float: left;
-		top: 6px;
-		}
-	
-	#profile form a#add {
-		display: inline-table;
-		float: left;
-		}
 		
 /* Intranet */
 	header#intranet {
 		background-color: #ffc928;
 		height: 90px;
 		}
-		
+	
+	header#intranet nav#global img{
+	 	border: 2px solid white;
+	 	position: relative;
+	 	float: left;
+		margin-top: 30px;
+		margin-left: 10px;
+	 	}
+	
+	header#intranet nav#global > ul > li{
+		min-width: 80px;
+	}
+	
+	header#intranet nav#global > ul > li:hover {
+		background-color: #f47d1c;
+	}
+ 	
+ 	header#intranet nav#global > ul > li > a > span {
+ 		margin-top: 35px;
+ 	}
+ 	
+ 	
+ 	header#intranet nav#global > ul > li > a > span.username{
+ 		padding-left: 5px;
+ 		margin-top: 25px;
+ 		font-weight: bold;
+ 	}
+ 	
+ 	header#intranet nav#global > ul > li > a > span.usertype{
+ 		padding-left: 5px;
+ 		margin-top: -2px
+ 	}
+ 	
+ 	div#title {
+		font-size: 32px;
+		}
+	
 	a.intranet{
 		color: #F36235 !important;
 		}
@@ -1199,6 +1171,96 @@
 	section#classes ul li span.professor {
 		font-size: 12px;
 		color: #666666;
+		}
+		
+/**
+ * Intranet
+ * Classes
+ *
+ */
+ 
+ 	section#myclasses{
+ 		margin-top: 60px;
+ 		margin-bottom: 60px;
+ 	}
+ 
+	section#myclasses div.class_row{
+		width: 100%;
+		border-top: 1px solid #CCC;
+		margin-top: 10px;
+		padding-top: 20px;
+		padding-bottom: 20px;
+		}
+	
+	section#myclasses div.class_description{
+		
+		}
+	
+	section#myclasses ul{
+		list-style: none;
+		}
+	section#myclasses ul a li{
+		float: left;
+		}
+ 
+/**
+ * Intranet
+ * Edit Profile
+ *
+ */	
+ 		
+	section#profile {
+		margin-top: 60px;
+		}
+		
+	section#profile img{
+		float: left;
+		margin-right: 10px;
+	}
+		
+			
+	section#profile form {
+		margin-top: 30px;
+		}
+			
+	section#profile form input {
+	  -webkit-border-radius: 2px;
+		-moz-border-radius: 2px;
+		border-radius: 2px;
+		
+		font: 12px "Lucida Grande","Tahoma", sans-serif;
+		padding:7px 5px 7px 5px;
+		border: 1px solid #999;
+		margin-bottom: 10px;
+		width: 350px;
+		float: left;
+		}
+	
+	section#profile form textarea {
+	  -webkit-border-radius: 2px;
+		-moz-border-radius: 2px;
+	  border-radius: 2px;
+
+		font: 12px/1.5 "Lucida Grande","Tahoma", sans-serif;
+		padding:7px 5px 7px 5px;
+		border: 1px solid #999;
+		margin-bottom: 15px;
+		height: 125px;
+	  width: 350px;
+		resize: none;
+		float: left;
+		}
+	
+	section#profile form label {
+		position: relative;
+		width: 150px;
+		float: left;
+		top: 6px;
+		}
+	
+	section#profile form a#add {
+		display: inline-table;
+		float: left;
 		}
 		
 /* Exhibition */
