--- a/assets/css/exhibition.css
+++ b/assets/css/exhibition.css
@@ -251,3 +251,17 @@
 		width: auto;
 		float: left;
 		}
+
+/**
+ * Animations
+ *
+ */
+ @-webkit-keyframes red-byline {
+ 	0% {
+ 		margin-top: -25px;
+ 		} 
+ 		
+ 	100% {
+ 		margin-top: -3px;
+ 		}
+ }
