--- a/assets/css/intranet.css
+++ b/assets/css/intranet.css
@@ -181,7 +181,7 @@
  
 	section#myclasses div.class_row{
 		width: 100%;
-		border-top: 1px solid #CCC;
+		border-top: 1px dotted #CCC;
 		margin-top: 10px;
 		padding-top: 20px;
 		padding-bottom: 20px;
@@ -230,6 +230,7 @@
 		-webkit-border-radius: 2px;
 		-moz-border-radius: 2px;
 		border-radius: 2px;
+		padding: 5px 20px 5px 10px;
 		}
 		
 	section#project h5:first-child{
@@ -238,7 +239,7 @@
 		
 	section#project hr{
 		width:100%;
-		margin: 25px 0px 15px 0px;
+		margin: 10px 0px 15px 0px;
 		float: none;
 		display: block;
 		border: 1px dotted #CCC;
@@ -263,7 +264,7 @@
 		overflow-y: scroll;
 
 		font: 12px/1.5 "Lucida Grande","Tahoma", sans-serif;
-		padding:7px 5px 7px 5px;
+		padding:15px;
 		border: 1px solid #999;
 		margin-top: 10px;
 		margin-bottom: 15px;
@@ -284,7 +285,65 @@
 		-moz-border-radius: 1px;
 		border-radius: 1px;
 		}
+		
+/**
+ * Intranet
+ * Project
+ *
+ */
 	
+	section#myprints {
+		margin-top: 60px;
+		margin-bottom: 60px;
+		}
+	
+	section#myprints hr{
+		width:100%;
+		margin: 30px 0px 30px 0px;
+		float: none;
+		display: block;
+		color: #ccc;
+		background-color: #aaa;
+		height: 1px;
+		border: 0px;
+		}
+	
+	section#myprints h3{
+		font-size: 18px;
+		margin-bottom: 15px;
+		border: 0px;
+		}
+	
+	section#myprints div#labels{
+		padding-top: 10px;
+		padding-bottom: 10px;
+		background-color: #EEE;
+		padding-left: 10px;
+		}
+	
+	section#myprints div.print_row{
+		border-top: 1px dotted #ccc;
+		padding-top: 10px;
+		padding-bottom: 10px;
+		padding-left: 10px;
+		}
+		
+	section#myprints span{
+		width: 175px;
+		display: inline-block;
+		}
+		
+	section#myprints span.edit{
+		width: 25px;
+		}
+	
+	section#myprints div.done{
+		color: #999;
+		}
+	
+	section#myprints div.print_row span.edit{
+		color: #00AA00;
+		}
 /**
  * Intranet
  * Edit Profile
