--- a/assets/css/programs.css
+++ b/assets/css/programs.css
@@ -1,58 +1,103 @@
-#course_track ul {
-	border-top: 1px solid #CCCCCC;
-	width: 220px;
-	float: left;
-	}
+/* Course Track */
+	#course_track ul {
+		border-top: 1px solid #CCCCCC;
+		width: 220px;
+		float: left;
+		}
+		
+	#course_track ul li {
+		-webkit-transition: all 0.2s ease-in-out;
+		padding: 3px 4px 5px 8px;
+		background: #EEEEEE;
+		list-style: none;
+		font-size: 12px;
+		}
+		
+	#course_track ul li.core:hover {
+		background: #AAAAAA;
+		color: #FFFFFF;
+		}
 	
-#course_track ul li {
-	-webkit-transition: all 0.2s ease-in-out;
-	padding: 3px 4px 5px 8px;
-	background: #EEEEEE;
-	list-style: none;
-	font-size: 12px;
-	}
+	#course_track ul li.design:hover {
+		background: #AAAAAA;
+		color: #FFFFFF;
+		}
 	
-#course_track ul li.core:hover {
-	background: #AAAAAA;
-	color: #FFFFFF;
-	}
+	#course_track ul li.elective:hover {
+		background: #AAAAAA;
+		color: #FFFFFF;
+		}
+	
+	#course_track h3 {
+		margin-bottom: 0;
+		border: 0;
+		}
+		
+	#spring {
+		clear: both;
+		}
+		
+	#fall ul {
+		margin-bottom: 10px;
+		}
+	
+	/* Special Tipsy HTML */
+	.tipsy-inner {
+		padding-bottom: 10px !important;
+		padding-right: 14px !important;
+		padding-top: 8px !important;
+		}
+	
+	.tipsy h4 {
+		text-align: left;
+		font-size: 14px;
+		color: #FFFFFF;
+		}
+		
+	.tipsy p {
+		text-align: left;
+		font-size: 12px;
+		}
+	
+/* Alumni & Careers */
+	section#alumni {
+		margin-top: 20px;
+		float: left;
+		}
 
-#course_track ul li.design:hover {
-	background: #AAAAAA;
-	color: #FFFFFF;
-	}
+	div#companies {
+		margin-top: 10px;
+		float: left;
+		}
+		
+	div.company { 
+		border-top: 1px solid #CCCCCC;
+		position: relative;
+		min-height: 140px;
+		float: left;
+		}
+		
+	div.company > span:first-child {
+		width: 210px !important;
+		padding: 10px 0 0 10px;
+		background: #F2F2F2;
+		margin-right: 10px;
+		min-height: 150px;
+		height: 100%;
+		}
+		
+	div.company span p:first-child {
+		padding-top: 10px;
+		float: left;
+		}
+		
+	div.company img {
+		}
+		
+	div.company:first-child {
+		padding-top: 0;
+		}
 
-#course_track ul li.elective:hover {
-	background: #AAAAAA;
-	color: #FFFFFF;
-	}
-
-#course_track h3 {
-	margin-bottom: 0;
-	border: 0;
-	}
-	
-#spring {
-	clear: both;
-	}
-	
-#fall ul {
-	margin-bottom: 10px;
-	}
-	
-/* Special Tipsy HTML */
-.tipsy-inner {
-	padding-bottom: 10px !important;
-	padding-right: 14px !important;
-	padding-top: 8px !important;
-	}
-
-.tipsy h4 {
-	text-align: left;
-	font-size: 12px;
-	color: #FFFFFF;
-	}
-	
-.tipsy p {
-	text-align: left;
-	}
+	div.company:last-child {
+		border-bottom: 0;
+		}
