--- a/assets/css/intranet_faculty.css
+++ b/assets/css/intranet_faculty.css
@@ -202,11 +202,18 @@
 	
 	section#myclass h2{
 		margin-bottom: 0px;
-/* 		line-height: 1; */
 		}
 	
 	section#myclass h4{
 		margin-bottom: 10px;
+		}
+	
+	section#myclass div#description a.edit{
+		visibility: hidden;
+		}
+	
+	section#myclass div#description:hover a.edit{
+		visibility: visible;
 		}
 
 	section#myclass h5:first-child{
@@ -238,7 +245,6 @@
 		width: 150px;
 		padding-bottom: 10px;
 		padding-right: 5px;
-/* 		font-size: 12px; */
 		}
 	
 	section#myclass #projects{
@@ -247,6 +253,39 @@
 		padding-top: 30px;
 		}
 		
+	section#myclass #projects ul{
+		list-style: none;
+		}
+		
+	section#myclass #projects ul li{
+		float: left;
+		}
+	
+	section#myclass textarea{
+		-webkit-border-radius: 2px;
+		-moz-border-radius: 2px;
+		border-radius: 2px;
+		font: 12px/1.5 "Lucida Grande","Tahoma", sans-serif;
+		padding:7px 5px 7px 5px;
+		border: 1px solid #999;
+		margin-bottom: 15px;
+		height: 180px;
+		width: 370px;
+		resize: none;
+		float: left;
+		display: block;
+		}
+		
+	section#myclass a.button{
+		background: #F36235;
+		padding: 5px 10px 5px 10px;
+		color: white;
+		-webkit-border-radius: 1px;
+		-moz-border-radius: 1px;
+		border-radius: 1px;
+		}
+	
+	
 /**
  * Intranet
  * Project
