--- a/assets/css/intranet.css
+++ b/assets/css/intranet.css
@@ -42,6 +42,7 @@
 	
 	header#intranet nav#global > ul > li{
 		border-left: 1px solid #ee8a09;
+		min-width: 75px;
 		}
 	
 	header#intranet nav#global > ul > li:last-child{
@@ -307,8 +308,8 @@
 		padding: 5px 20px 5px 10px;
 		}
 		
-	section#project h5:first-child{
-		margin-bottom: 10px;
+	section#project h5{
+		margin-bottom: 5px;
 		}
 		
 	section#project hr{
@@ -320,13 +321,20 @@
 		border-style: none none dotted;
 		}
 	
-	section#project div#sidebar{
-		background-color: #f2f2f2;
-		}
-	section#project div#sidebar>div{
-		padding: 15px;
+	section#project div#sidebar h3{
+		margin-bottom: 5px;
 		}
 		
+	section#project div#sidebar>div{
+		padding: 15px;
+		background-color: #f2f2f2;
+		}
+	
+	section#project div#sidebar hr{
+		margin-top: 20px;
+		margin-bottom: 20px;	
+		}
+	
 	section#project div#sidebar>div img{
 		margin-bottom: 5px;
 		}
@@ -501,5 +509,5 @@
 		-moz-border-radius: 1px;
 		border-radius: 1px;
 		display: inline-table;
-		margin-top: 30px;
+		margin-top: 20px;
 		}
