--- a/assets/css/intranet_faculty.css
+++ b/assets/css/intranet_faculty.css
@@ -417,3 +417,15 @@
 		display: inline-table;
 		float: left;
 		}
+		
+	section#profile a.button{
+		margin-left: 150px;
+		background: #F36235;
+		padding: 5px 10px 5px 10px;
+		color: white;
+		-webkit-border-radius: 1px;
+		-moz-border-radius: 1px;
+		border-radius: 1px;
+		display: inline-table;
+		margin-top: 20px;
+		}
