--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,6 +237,53 @@
 		cursor: pointer;
 		}
 		
+	.relativity li ul {
+		padding: 0 10px 10px 10px;
+		}
+		
+	.relativity li ul li {
+		margin-bottom: 10px;
+		}
+		
+	.relativity li ul li a {
+		-webkit-transition: color 0.2s ease-in-out;
+		color: #F36235;
+		}
+		
+	.relativity li ul li a:hover {
+		color: #B94929;
+		}
+		
+	.relativity li ul li p {
+		padding-left: 10px;
+		}
+		
+	.relativity li h4 {
+		padding-left: 20px;
+		color: #333333;
+		}
+		
+	.relativity li a span.file {
+		-webkit-transition: background 0.2s ease-in-out;
+		-webkit-mask: url('../img/file.png') no-repeat;
+		background: #F36235;
+		margin: 5px 5px 0 0;
+		float: left;
+		height: 9px;
+		width: 6px;
+		}
+		
+	.relativity li a:hover span.file {
+		background: #B94929;
+		}
+		
+	.relativity li a span.no-icon {
+		height: 1px;
+		width: 11px;
+		float: left;
+		}
+
+		
 	/* Special styling for applying */
 	.relativity li.apply {
 		border-bottom: 1px solid #F36235;
@@ -247,17 +294,32 @@
 		padding: 15px;
 		}
 		
-	.relativity li.apply a {
-		-webkit-transition: all 0.2s ease-in-out;
+	.relativity li.apply.short {
+		min-height: 40px;
+		}
+		
+	.relativity li.apply h4 {
+		color: #B94929;
+		padding: 0;
+		}
+		
+	.relativity li.apply a.apply {
 		margin-top: 10px;
 		font-size: 14px;
-		color: #FFFFFF;
 		float: right;
+		}
+			
+	.relativity li.apply a {
+		-webkit-transition: all 0.2s ease-in-out;
+		font-size: 12px;
+		color: #FFFFFF;
+		float: left;
 		}
 		
 	.relativity li.apply a:hover {
 		margin-right: -5px;
 		}
+		
 		
 	.relativity li.apply + li {
 		padding-top: 10px;
@@ -375,6 +437,15 @@
 		
 	p.content {
 		margin-bottom: 20px;
+		}
+		
+	p.content a {
+		-webkit-transition: color 0.2s ease-in-out;
+		color: #F36235;
+		}
+		
+	p.content a:hover {
+		color: #B94929;
 		}
 		
 	#section_header {
