--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1108,3 +1108,46 @@
 	ul.dates li {
 		border-bottom: 1px dotted #CCC;
 		}
+
+
+/**
+ * Front page experiment
+ *
+ *
+ */
+ 
+ 	h2.experimental{
+	 	font-size: 28px;
+	 	margin-bottom: 20px;
+	 	}
+	 	
+ 	span#pager.experimental{
+	 	margin-top: 10px;
+	 	}
+ 
+	section#feature_strip{
+		border-top: 1px dotted #ccc;
+		background-color: #eef2f2;
+		width: 100%;
+		height: 360px;
+		padding-top: 30px;
+		clear: both;
+		}
+		
+	h3.experimental{
+		 border: 0px;
+		 font-size: 18px;
+		 height: auto;
+		 width: auto;
+		 padding: 0px;
+		 margin: 0px 0px 10px 0px;
+		}
+	
+	section#feature_strip img{
+		margin-bottom: 10px;
+		}
+		
+	#tertiary.experimental{
+		margin-top: 0px;
+		margin-bottom: 30px;
+		}
