--- a/assets/css/intranet_faculty.css
+++ b/assets/css/intranet_faculty.css
@@ -80,6 +80,15 @@
  		margin-bottom: 60px;
 		}
 	
+	a.button{
+		background: #F36235;
+		padding: 5px 10px 5px 10px;
+		color: white;
+		-webkit-border-radius: 1px;
+		-moz-border-radius: 1px;
+		border-radius: 1px;
+		}	
+	
 /**
  * Intranet
  * Home page
