--- a/assets/css/community.css
+++ b/assets/css/community.css
@@ -142,12 +142,20 @@
 /* Inside Profiles */
 	span.bio {
 		margin: 10px 0 20px 0;
+		position: relative;
 		width: 100%;
 		float: left;
 		}
 		
 	span.bio h2 {
 		line-height: 1.2;
+		}
+		
+	span.bio img {
+		margin: 5px 20px 0 0;
+		height: auto;
+		width: 80px;
+		float: left;
 		}
 		
 	span.bio span.byline {
@@ -160,7 +168,6 @@
 		font-size: 12px;
 		color: #F36235;
 		float: left;
-		clear: both;
 		}
 		
 	span.bio a:hover {
