minor frontpageexp3 changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1197,3 +1197,11 @@
 	span.details{
 		font-size: 12px;
 		}
+		
+	#push.experimental{
+		height: 4em;
+		}
+		
+	article.experimental{
+		margin-bottom: 10px;
+		}
